kubernates/Interview.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: anjana-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anjana-d
  namespace: anjana-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
    template:
      metadata:
        labels:
          app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: anjana-vm
          path: "/usr/share/nginx/html"
        resource:
          requests:
            cpu: 1Gi
            memory: "250m"
          limits:
            cpu: 1Gi
            memory: "250m"
