kubernates/Practice.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: anjana-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anjana-nginx-deployment
  namespace: anjana-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-volume
          mountPath: /usr/dhsre/nginx/html
        resources:
          requests:
            memory: "6Mi"
            cpu: "25m"
          limits:
            memory: "12Mi"
            cpu: "50m"
      volumes:
      - name: nginx-volume
        persistentVolumeClaim:
          claimName: anjana-pvc
