kubernates/Nginx-Deployment-E2E-Copy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tomcat-webserver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deployment
  namespace: tomcat-webserver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: tomcat:9.0
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: tomcat-storage
          mountPath: /usr/local/tomcat/webapps
        - name: tomcat-config-volume
          mountPath: /usr/local/tomcat/conf/server.xml
          subPath: server.xml
      volumes:
      - name: tomcat-storage
        persistentVolumeClaim:
          claimName: tomcat-pvc
      - name: tomcat-config-volume
        configMap:
          name: tomcat-config
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
  namespace: tomcat-webserver
spec:
  selector:
    app: tomcat
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tomcat-ingress
  namespace: tomcat-webserver
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: tomcat.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tomcat-service
            port:
              number: 80
